@@ -38,6 +38,11 @@ java {
     withSourcesJar()
 }
 
+jacoco {
+    toolVersion = '0.8.14'
+}
+
+
 repositories {
     mavenCentral()
     // optionally enable this for local testing:
@@ -134,10 +139,6 @@ test {
     useJUnitPlatform()
 }
 
-jacoco {
-    toolVersion = '0.8.12'
-}
-
 // Publishing: keep minimal/standard to avoid Gradle 9 DSL issues
 publishing {
     publications {
@@ -165,4 +166,16 @@ tasks.named('compileTestGroovy', GroovyCompile).configure {
 tasks.named('compileTestJava', JavaCompile).configure {
     dependsOn(tasks.named('compileAstGroovy'))
     classpath += sourceSets.ast.output
+}
+
+// avoid instrumenting JDK internals and similar
+tasks.withType(Test).configureEach {
+    jacoco {
+        excludes = ['java/**', 'javax/**', 'jdk/**', 'sun/**', 'com/sun/**']
+    }
+}
+
+//hide native access warnings - clearer to read
+tasks.withType(Test).configureEach {
+    jvmArgs '--enable-native-access=ALL-UNNAMED'
 }
